# rusteroids

./: .eslintignore  .gitignore  .prettierignore  Cargo.toml  README.md  build.sh  clean.sh  main.js  package-lock.json  package.json  server.js  style.css  webpack.config.js
.github/workflows/: ci.yml
lib/: asteroid.rs  blast.rs  control.rs  font.rs  game.rs  geometry.rs  iter.rs  main.rs  motion.rs  particle.rs  render.rs  typography.rs  util.rs
src/: index.html  main.js  style.css
wasm/: asteroids.js  asteroids_bg.wasm
